# Agentic-RAG-and-LLMs

./: README.md  main.py  pyproject.toml  requirements.txt  utils.py
langchian_chat/: main.py
local_llama/: run_ollama.py
local_llama/static/: index.js  style.css
local_llama/templates/: index.html
writing_agent/: options.py  server.py
