[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.6",
    "gradio>=5.9.1",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-llama>=0.1.1",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.2.14",
    "pypdf>=5.1.0",
    "transformers>=4.47.1",
    "wikipedia>=1.4.0",
]
